--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "core-js": "^2.6.5",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
+    "promise-ftp": "^1.3.5",
+    "ssh2-sftp-client": "^2.5.0",
     "tmp": "^0.1.0",
+    "uniqid": "^5.0.3",
     "vue": "^2.6.10"
   },
   "devDependencies": {
