--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "chokidar": "^3.0.1",
     "core-js": "^2.6.5",
     "mime-types": "^2.1.24",
@@ -32,6 +36,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "ftp": "^0.3.10",
+    "sass": "^1.22.3",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-electron-builder": "^1.3.5",
     "vue-template-compiler": "^2.6.10"
   },
