--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run electron:serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -19,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "chokidar": "^3.0.1",
     "core-js": "^2.6.5",
+    "dotenv-flow": "^3.0.0-rc.1",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
     "promise-ftp": "^1.3.5",
@@ -35,7 +37,6 @@
     "electron": "^5.0.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "ftp": "^0.3.10",
     "sass": "^1.22.3",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-electron-builder": "^1.3.5",
